[package]
authors = ["Shaurya Gupta <shauryab98@gmail.com>"]
edition = "2018"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "cryptopals"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
